# mac-keyboard-shortcuts

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: api-usage.md  cli-usage.md  conf.py  index.md  reference.md  requirements.txt  usage-examples.md  usage.md
docs/examples/execute_module/: code.py  readme.md
docs/examples/minimal_with_alfred/: code.py  readme.md
src/mac_keyboard_shortcuts/: __init__.py  __main__.py  api.py  entries_mutators.py  mac_set_keyboard_shortcuts.py
src/mac_keyboard_shortcuts/consts/: actions.py  apple.py  consts.py  keys.py  modifiers.py
src/mac_keyboard_shortcuts/types/: aliases.py  apple.py  entry.py  key.py
src/mac_keyboard_shortcuts/usecases/: authoring.py  diff_plist_files.py  mutate_using_python.py  print_enabled.py  print_plist_file.py
src/mac_keyboard_shortcuts/utils/: authoring.py  diff_side_by_side.py  entries_mutators.py  helpers.py  plist.py  plist_reading.py  plist_writing.py  print_side_by_side.py
tests/: __init__.py  test_flags.py  test_main.py
