[tool.poetry]
name = "mac-keyboard-shortcuts"
version = "0.0.0"
description = "Mac Keyboard Shortcuts"
authors = ["Kamil E <kamil@essekkat.pl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ekamil/mac-keyboard-shortcuts"
repository = "https://github.com/ekamil/mac-keyboard-shortcuts"
documentation = "https://mac-keyboard-shortcuts.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/ekamil/mac-keyboard-shortcuts/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.0.1"

[tool.poetry.extras]
color = ["termcolor"]

[tool.poetry.scripts]
mac-keyboard-shortcuts = "mac_keyboard_shortcuts.__main__:main"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
ruff = { extras = ["format"], version = "^0.2.2" }
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
myst-parser = { version = ">=0.16.1" }
furo = "^2024.1.29"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
